[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/GameAssets/Background/ArenaBorder.png" type="Texture" id=1]
[ext_resource path="res://Assets/GameAssets/Background/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/NEONLEDLight.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/GameAssets/HyperNeonDelta.png" type="Texture" id=4]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sound/Neon Delta Menu Music.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sound/Select2.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="TitleScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.992157, 0.105882, 1, 0.686275 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArenaBorder" type="TextureRect" parent="."]
modulate = Color( 0.113725, 0.968627, 0.972549, 0.823529 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Control" parent="HBoxContainer"]
margin_right = 508.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxButton" type="VBoxContainer" parent="HBoxContainer/Button"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -133.5
margin_right = 133.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="HBoxContainer/Button/VBoxButton"]
margin_top = 188.0
margin_right = 267.0
margin_bottom = 286.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.00392157, 0.952941, 1, 1 )
text = "PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="HBoxContainer/Button/VBoxButton"]
margin_top = 290.0
margin_right = 267.0
margin_bottom = 388.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "EXIT"
flat = true

[node name="Logo" type="TextureRect" parent="HBoxContainer"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 4

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/FadeIn = SubResource( 3 )

[node name="TitleScreenMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[connection signal="pressed" from="HBoxContainer/Button/VBoxButton/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HBoxContainer/Button/VBoxButton/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
